[tool.poetry]
name = "postgresql-testing"
version = "0.1.0"
description = ""
authors = ["Daniels Ivaskevics <wavesaftwaves@gmail.com>"]
readme = "README.md"
packages = [{include = "postgresql_testing"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
